@@ -1,5 +1,8 @@
 2013-11-24  Moritz Bunkus  <moritz@bunkus.org>
 
+        * mkvmerge: bug fix: improved resilience against MP4 files with
+        obviously wrong entries in the 'sample size table' (STSZ) atom.
+
         * mkvmerge: bug fix: improved VC1 frame type detection so that it
         works even for streams without entry points.
 
